2012-10-13 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.5-09
   * R/coefplot: fix an issue in coefplot.  No longer reset par when exit.
   * R/bayesglm: fix an issue in dev and family$state$valideta, family$state$mu

2012-10-03 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.5-08
   * R/bayesglm: fix various bugs in bayesglm

2012-09-26 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.5-07
   * R/balance: handle the situation when the formula in pscore.fit is not directly express.

2012-09-20 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.5-06
   * R/bayesglm: stop using .Fortran() here.

2012-06-6 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.5-05
   * man/bayesglm: add predictLM
   * R/bayesglm: add predict.bayesglm, predictLM to fit with model.matrixBayes
   
2012-04-27 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.5-04
   * man/bayesglm: rewrite the description for the option scaled.

2012-03-3 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.5-03
   * DESCRIPTION: add foreign as the required package
   * R/simmer: new sim() for mer class

2012-01-19 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.5-01
   * R/mcsamp: add mcsamp() back, though it is not working.
   * R/AllGeneric: set coef, print, as generic to pass the check

2011-11-21 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-14
   * R/.onAttach: fix the NOTE issue

2011-06-19 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-13
   * R/coefplot: fix margin control.

2011-06-11 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-12
   * R/bayespolr: add min.prior.scale
   * R/binnedplot: add nclass > 1 check
   * man/bayespolr: add min.prior.scale
   
